# rsPHP

./: CMakeLists.txt  README.md
autotests/: array.rsphp  array.rsphp.out  ast.rsphp  ast.rsphp.out  comments.rsphp  comments.rsphp.out  fibrecursion.rsphp  fibrecursion.rsphp.out  funcs.rsphp  funcs.rsphp.out  gc.rsphp  lambda.rsphp  lambda.rsphp.out  mapreduce.rsphp  mapreduce.rsphp.out  operatorplus.rsphp  operatorplus.rsphp.out  operators.rsphp  operators.rsphp.out  reference.rsphp  reference.rsphp.out  run.sh  test1.rsphp  test1.rsphp.out  test2.rsphp  test2.rsphp.out  trycatch.rsphp  trycatch.rsphp.out  variables.rsphp  while.rsphp  while.rsphp.out
examples/: funccall  funccall2
src/: CMakeLists.txt  ast.cpp  ast.h  aval.cpp  aval.h  bootstrap.h  builtins.cpp  builtins.h  common.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  lexer.l  main.cpp  memorypool.cpp  memorypool.h  parser.h  parser.y
